# dotfiles

./: .Xmodmap  .Xresources  .bash_profile  .bashrc  .clang-format  .conkyrc  .gdbinit  .gitconfig  .gitignore  .i3status.conf  .inputrc  .mpdconf  .nanorc  .nvimrc  .ocamlinit  .remember.txt  .spacemacs  .termite.config  .tmux.conf  .vimrc  .wezterm.lua  .windows_wezterm.lua  .ycm_extra_conf.py  .zshenv  .zshrc  Brewfile  Microsoft.PowerShell_profile.ps1  README.md  android_sdk_paths.source.sh  baklocs  browser_prompter.py  build.py  configuration.nix  dotfiles  ginit.vim  gits.py  glazewm.yaml  init.vim  konsolerc  llppclear.py  (+19 more)
.i3/: config  conky  conky-i3bar  font_top.txt  i3_config_dunst  keybinds.txt  lemonbar-print.sh  set.sh
.mpd/: database  log  state
.ncmpcpp/: config
.pekwm/: .pekwm  config  keys  menu  mouse  start
alacritty/: alacritty.yml
build_setup/: README.md
build_setup/c++/common/: CMakeLists.txt
build_setup/c++/lua/: CMakeLists.1.txt  CMakeLists.txt
colors/: SRE.tmTheme  SRE_BERRY.tmTheme  SRE_BLACK.tmTheme  SRE_BLUE.tmTheme  SRE_COMMENTED.tmTheme  SRE_GREEN.tmTheme  SRE_WHITE.tmTheme  canvas.txt  hemisu_mod.vim  sre.txt  sre.vim
i3/: config  i3blocks.conf  i3t.py
lazy-nvim/: init.lua  lazy-lock.json
nvim/: .gitignore  day_time.vim  font.vim  ginit.vim  init.lua  init.vim  install-lsp-packages.sh  maps.vim  night_time.vim  plug.vim  wallpaper.html  writing.vim
nvim-lazy/: init.lua  lazyvim.json
polybar/: config.ini  launch.sh
quotes/: aronowitz.txt  beauty_knuth.txt  cohen.txt  cunningham.txt  darkness.txt  davidgelernter_beauty.txt  dijkstra_simplicity.txt  ethernet.txt  frankl.txt  jones.txt  (+12 more)
(+60 files in other folders)
